--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "datalib": "^1.3.0",
     "viscompass": "~0.5.8",
     "vega-lite": "~0.7.11",
-    "vega-lite-ui": "~0.7.14"
+    "vega-lite-ui": "https://github.com/vivekratnavel/vega-lite-ui.git"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1"
