--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "voyager",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "authors": [
     "Interactive Data Lab (http://idl.cs.washington.edu)"
   ],
@@ -11,7 +11,6 @@
     "angular-sanitize": "~1.4.1",
     "angular-ui-router": "~0.2.15",
     "angular": "~1.4.1",
-    "papaparse": "~4.1.1",
     "tv4": "~1.1.12",
     "d3": "~3.5.5",
     "angular-zeroclipboard": "~0.4.0",
@@ -20,11 +19,10 @@
     "fontawesome": "~4.3.0",
     "angular-tooltips": "~0.1.13",
     "angular-order-object-by": "~1.1.0",
-    "angular-websql": "~1.0.2",
     "datalib": "^1.3.0",
     "viscompass": "~0.5.8",
     "vega-lite": "~0.7.11",
-    "vega-lite-ui": "https://github.com/vivekratnavel/vega-lite-ui.git"
+    "vega-lite-ui": "https://github.com/vivekratnavel/vega-lite-ui.git#~0.8.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.1"
