--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voyager",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "description": "Faceted Search User Interface for Data Exploration",
   "author": {
     "name": "UW Interactive Data Lab",
@@ -9,11 +9,12 @@
   "collaborators": [
     "Dominik Moritz <domoritz@cs.washington.edu> (http://domoritz.de)",
     "Kanit Wongsuphasawat <kanitw@gmail.com> (http://kanitw.yellowpigz.com)",
-    "Jeffrey Heer <jheer@uw.edu> (http://jheer.org)"
+    "Jeffrey Heer <jheer@uw.edu> (http://jheer.org)",
+    "Vivek Ratnavel <vivekratnavel.s@gmail.com>"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/uwdata/voyager.git"
+    "url": "https://github.com/vivekratnavel/voyager"
   },
   "license": "BSD-3-Clause",
   "scripts": {
