--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "jquery": "~2.1.4",
     "chronicle": "~1.0.9",
     "fontawesome": "~4.3.0",
-    "angular-tooltips": "~0.1.13",
+    "angular-tooltips": "0.1.16",
     "angular-order-object-by": "~1.1.0",
     "datalib": "^1.3.0",
     "viscompass": "~0.5.8",
